# kulupu

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  Dockerfile  README.md  appveyor.yml  azure-pipelines.yml  kulupu_runtime.wasm
.github/workflows/: cancel.yml  rust.yml
anyupgrade/: Cargo.toml
anyupgrade/src/: lib.rs
docs/: SECURITY.md
frame/anyupgrade/: Cargo.toml
frame/anyupgrade/src/: lib.rs
frame/difficulty/: Cargo.toml
frame/difficulty/src/: lib.rs
frame/eras/: Cargo.toml
frame/eras/src/: lib.rs
frame/lockdrop/: Cargo.toml
frame/lockdrop/src/: benchmarking.rs  default_weights.rs  lib.rs  tests.rs
frame/reward-curve/: Cargo.toml
frame/reward-curve/src/: lib.rs  mock.rs  tests.rs
frame/rewards/: Cargo.toml
frame/rewards/src/: benchmarking.rs  default_weights.rs  lib.rs  migrations.rs  mock.rs  tests.rs
frame/variables/: Cargo.toml
frame/variables/src/: lib.rs
pow/: Cargo.toml
pow/consensus/: Cargo.toml
pow/consensus/src/: lib.rs  worker.rs
pow/randomx/: .gitignore  Cargo.toml
pow/randomx/benches/: fullvm.rs
pow/randomx/src/: lib.rs
pow/randomx/sys/: Cargo.toml  build.rs
pow/randomx/sys/src/: lib.rs
pow/src/: compact.rs  lib.rs  weak_sub.rs
pow/src/compute/: mod.rs  v1.rs  v2.rs
primitives/: Cargo.toml
primitives/src/: lib.rs
res/0-genesis/: kulupu_runtime.compact.wasm  kulupu_runtime.wasm
res/1-kinshasa/: kulupu_runtime.compact.wasm  kulupu_runtime.wasm
res/2-barcelona/: kulupu_runtime.compact.wasm  kulupu_runtime.wasm
res/breaknet1/: kulupu_runtime.compact.wasm  kulupu_runtime.wasm
res/breaknet2/: kulupu_runtime.compact.wasm  kulupu_runtime.wasm
res/breaknet3/: kulupu_runtime.compact.wasm  kulupu_runtime.wasm
res/breaknet4/: config.json  kulupu_runtime.compact.wasm  kulupu_runtime.wasm
res/era-states/: 0.json
res/eras/0/: final.json
res/eras/0/1-irontown/: config.json
res/eras/0/1-slag-ravine/: kulupu_runtime.compact.wasm
res/eras/0/slag-ravine/: kulupu_runtime.wasm
res/eras/1/11-gondoa/: kulupu_runtime.compact.wasm  kulupu_runtime.wasm
res/eras/1/13-hotel-adriano/: kulupu_runtime.compact.wasm  kulupu_runtime.wasm
res/eras/1/15-nh558j2/: kulupu_runtime.compact.wasm  kulupu_runtime.wasm
res/eras/1/16-nh558j2/: kulupu_runtime.compact.wasm  kulupu_runtime.wasm
res/eras/1/17-dx3906/: kulupu_runtime.compact.wasm  kulupu_runtime.wasm
res/eras/1/2-swamp-bottom/: kulupu_runtime.wasm
res/eras/1/20-trantor/: kulupu_runtime.compact.wasm  kulupu_runtime.wasm
res/eras/1/24-pelican-town/: kulupu_runtime.compact.wasm  kulupu_runtime.wasm
res/eras/1/3-sky-island-68/: kulupu_runtime.wasm
res/eras/1/3-swamp-bottom/: config.json
res/eras/1/4-sky-island-68/: kulupu_runtime.compact.wasm
res/eras/1/5-red-coast-base/: kulupu_runtime.compact.wasm  kulupu_runtime.wasm
res/eras/1/6-seeker-camp/: kulupu_runtime.compact.wasm  kulupu_runtime.wasm
res/eras/1/7-red-gate/: kulupu_runtime.compact.wasm  kulupu_runtime.wasm
res/eras/1/9-grand-view-garden/: kulupu_runtime.compact.wasm  kulupu_runtime.wasm
res/eras/1/genesis/: kulupu_runtime.compact.wasm  kulupu_runtime.wasm
res/genesis/: kulupu_runtime.compact.wasm  kulupu_runtime.wasm
rewards/: Cargo.toml
rewards/src/: lib.rs
rpc/work/: Cargo.toml
rpc/work/src/: lib.rs
runtime/: Cargo.toml  build.rs
runtime/src/: difficulty.rs  fee.rs  lib.rs
runtime/src/weights/: lockdrop.rs  mod.rs  rewards.rs
scripts/: ci-ubuntu-init.sh  ci.sh
src/: chain_spec.rs  cli.rs  command.rs  eras.rs  main.rs  rpc.rs  service.rs
