[package]
name = "kulupu"
version = "2.3.0"
authors = ["Wei Tang <wei@that.world>"]
license = "GPL-3.0-or-later"
build = "build.rs"
edition = "2018"

[[bin]]
name = "kulupu"
path = "src/main.rs"

[dependencies]
futures = "0.3"
log = "0.4"
structopt = "0.3"
codec = { package = "parity-scale-codec", version = "1.0.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonrpc-core = "15.0.0"
parking_lot = "0.10.0"

sc-cli = { path = "vendor/substrate/client/cli" }
sc-rpc = { path = "vendor/substrate/client/rpc" }
sc-keystore = { path = "vendor/substrate/client/keystore" }
sp-core = { path = "vendor/substrate/primitives/core" }
sp-api = { path = "vendor/substrate/primitives/api" }
sp-blockchain = { path = "vendor/substrate/primitives/blockchain" }
sp-block-builder = { path = "vendor/substrate/primitives/block-builder" }
sc-rpc-api = { path = "vendor/substrate/client/rpc-api" }
sp-timestamp = { path = "vendor/substrate/primitives/timestamp" }
sc-executor = { path = "vendor/substrate/client/executor" }
sc-service = { path = "vendor/substrate/client/service" }
sp-inherents = { path = "vendor/substrate/primitives/inherents" }
sc-transaction-pool = { path = "vendor/substrate/client/transaction-pool" }
sp-transaction-pool = { path = "vendor/substrate/primitives/transaction-pool" }
sc-network = { path = "vendor/substrate/client/network" }
sc-consensus-pow = { path = "vendor/substrate/client/consensus/pow" }
sp-consensus = { path = "vendor/substrate/primitives/consensus/common" }
sc-consensus = { path = "vendor/substrate/client/consensus/common" }
sc-finality-grandpa = { path = "vendor/substrate/client/finality-grandpa" }
sp-finality-grandpa = { path = "vendor/substrate/primitives/finality-grandpa" }
sc-client-api = { path = "vendor/substrate/client/api" }
sp-runtime = { path = "vendor/substrate/primitives/runtime" }
sc-basic-authorship = { path = "vendor/substrate/client/basic-authorship" }
substrate-frame-rpc-system = { path = "vendor/substrate/utils/frame/rpc/system" }
pallet-transaction-payment-rpc = { path = "vendor/substrate/frame/transaction-payment/rpc/" }

pallet-rewards = { path = "frame/rewards" }
pallet-reward-curve = { path = "frame/reward-curve" }
pallet-eras = { path = "frame/eras" }
kulupu-pow = { path = "pow" }
kulupu-runtime = { path = "runtime" }
kulupu-primitives = { path = "primitives" }

# benchmarking
frame-benchmarking = { path = "vendor/substrate/frame/benchmarking" }
frame-benchmarking-cli = { path = "vendor/substrate/utils/frame/benchmarking-cli" }

[build-dependencies]
substrate-build-script-utils = { path = "vendor/substrate/utils/build-script-utils" }

[features]
default = []
wasmtime = [
	"sc-executor/wasmtime",
	"sc-cli/wasmtime",
	"sc-service/wasmtime",
]
runtime-benchmarks = [
	"wasmtime",
	"kulupu-runtime/runtime-benchmarks",
]

[workspace]
members = [
	"runtime",
	"pow",
	"frame/rewards",
	"frame/eras",
]
exclude = ["vendor"]
