[package]
name = "kulupu"
version = "2.4.0"
authors = ["Wei Tang <wei@that.world>"]
license = "GPL-3.0-or-later"
build = "build.rs"
edition = "2018"

[[bin]]
name = "kulupu"
path = "src/main.rs"

[dependencies]
futures = "0.3"
log = "0.4"
structopt = "0.3"
codec = { package = "parity-scale-codec", version = "1.0.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonrpc-core = "15.0.0"
parking_lot = "0.10.0"

sc-cli = { git = "https://github.com/paritytech/substrate", branch = "kulupu" }
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "kulupu" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "kulupu" }
sc-keystore = { git = "https://github.com/paritytech/substrate", branch = "kulupu" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "kulupu" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "kulupu" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "kulupu" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "kulupu" }
sc-rpc-api = { git = "https://github.com/paritytech/substrate", branch = "kulupu" }
sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "kulupu" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "kulupu" }
sc-service = { git = "https://github.com/paritytech/substrate", branch = "kulupu" }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "kulupu" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "kulupu" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "kulupu" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "kulupu" }
sc-consensus-pow = { git = "https://github.com/paritytech/substrate", branch = "kulupu" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "kulupu" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "kulupu" }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "kulupu" }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "kulupu" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "kulupu" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "kulupu" }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate", branch = "kulupu" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate", branch = "kulupu" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "kulupu" }

pallet-rewards = { path = "frame/rewards" }
pallet-eras = { path = "frame/eras" }
kulupu-pow = { path = "pow" }
kulupu-runtime = { path = "runtime" }
kulupu-primitives = { path = "primitives" }

# benchmarking
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "kulupu" }
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate", branch = "kulupu" }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", branch = "kulupu" }

[features]
default = []
wasmtime = [
	"sc-executor/wasmtime",
	"sc-cli/wasmtime",
	"sc-service/wasmtime",
]
runtime-benchmarks = [
	"wasmtime",
	"kulupu-runtime/runtime-benchmarks",
]

[workspace]
members = [
	"runtime",
	"pow",
	"frame/rewards",
	"frame/eras",
]
