[package]
name = "pallet-anyupgrade"
version = "0.1.0"
authors = ["Wei Tang <hi@that.world>"]
edition = "2018"

[dependencies]
support = { package = "frame-support", path = "../vendor/substrate/frame/support", default-features = false }
system = { package = "frame-system", path = "../vendor/substrate/frame/system", default-features = false }
sr-primitives = { package = "sp-runtime", path = "../vendor/substrate/primitives/sr-primitives", default-features = false }
rstd = { package = "sp-std", path = "../vendor/substrate/primitives/sr-std", default-features = false }
codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false, features = ["derive"] }
inherents = { package = "sp-inherents", path = "../vendor/substrate/primitives/inherents", default-features = false }

[features]
default = ["std"]
std = [
	"support/std",
	"system/std",
	"sr-primitives/std",
	"rstd/std",
	"codec/std",
	"inherents/std",
]
