[package]
name = "kulupu-pow"
version = "1.1.0"
authors = ["Wei Tang <hi@that.world>"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.0.0" }
log = "0.4"
lru-cache = "0.1"
rand = { version = "0.7", features = ["small_rng"] }
lazy_static = "1.4"
sp-consensus = { path = "../vendor/substrate/primitives/consensus/common" }
sp-consensus-pow = { path = "../vendor/substrate/primitives/consensus/pow" }
sp-runtime = { path = "../vendor/substrate/primitives/runtime" }
sp-inherents = { path = "../vendor/substrate/primitives/inherents" }
sp-core = { path = "../vendor/substrate/primitives/core" }
sp-api = { path = "../vendor/substrate/primitives/api" }
sc-client-api = { package = "sc-client-api", path = "../vendor/substrate/client/api" }
sc-consensus-pow = { path = "../vendor/substrate/client/consensus/pow" }
kulupu-primitives = { path = "../primitives" }
kulupu-runtime = { path = "../runtime" }
kulupu-randomx = { path = "randomx" }
