[package]
name = "kulupu-pow"
version = "2.5.0"
authors = ["Wei Tang <wei@that.world>"]
license = "GPL-3.0-or-later"
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0" }
log = "0.4"
lru-cache = "0.1"
rand = { version = "0.8", features = ["small_rng"] }
lazy_static = "1.4"
parking_lot = "0.10.0"
humantime = "2.0.1"
once_cell = "1.5"
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "kulupu" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "kulupu" }
sp-consensus-pow = { git = "https://github.com/paritytech/substrate", branch = "kulupu" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "kulupu" }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "kulupu" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "kulupu" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "kulupu" }
sp-application-crypto = { git = "https://github.com/paritytech/substrate", branch = "kulupu" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "kulupu" }
sc-consensus-pow = { git = "https://github.com/paritytech/substrate", branch = "kulupu" }
sc-keystore = { git = "https://github.com/paritytech/substrate", branch = "kulupu" }
kulupu-primitives = { path = "../primitives" }
kulupu-runtime = { path = "../runtime" }
kulupu-randomx = { path = "randomx" }
