[package]
name = "kulupu-pow"
version = "2.8.1"
authors = ["Wei Tang <wei@that.world>"]
license = "GPL-3.0-or-later"
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0" }
scale-info = "1.0.0"
log = "0.4"
lru-cache = "0.1"
rand = { version = "0.8", features = ["small_rng"] }
lazy_static = "1.4"
parking_lot = "0.10.0"
humantime = "2.0.1"
once_cell = "1.5"
async-trait = "0.1.42"
sp-blockchain = { git = "https://github.com/paritytech/substrate" }
sp-consensus = { git = "https://github.com/paritytech/substrate" }
sp-consensus-pow = { git = "https://github.com/paritytech/substrate" }
sp-runtime = { git = "https://github.com/paritytech/substrate" }
sp-inherents = { git = "https://github.com/paritytech/substrate" }
sp-core = { git = "https://github.com/paritytech/substrate" }
sp-api = { git = "https://github.com/paritytech/substrate" }
sp-application-crypto = { git = "https://github.com/paritytech/substrate" }
sc-client-api = { git = "https://github.com/paritytech/substrate" }
sc-consensus = { git = "https://github.com/paritytech/substrate" }
sc-keystore = { git = "https://github.com/paritytech/substrate" }
kulupu-primitives = { path = "../primitives" }
kulupu-runtime = { path = "../runtime" }
kulupu-randomx = { path = "randomx" }
kulupu-pow-consensus = { path = "consensus" }
