[package]
name = "kulupu-primitives"
version = "0.1.0"
authors = ["Wei Tang <hi@that.world>"]
edition = "2018"

[dependencies]
pow-primitives = { package = "sp-consensus-pow", path = "../vendor/substrate/primitives/consensus/pow", default-features = false }
substrate-primitives = { package = "sp-core", path = "../vendor/substrate/primitives/core", default-features = false }
sr-api = { package = "sp-api", path = "../vendor/substrate/primitives/sr-api", default-features = false }
codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0", optional = true, features = ["derive"] }

[features]
default = ["std"]
std = ["pow-primitives/std", "substrate-primitives/std", "sr-api/std", "codec/std", "serde"]
