[package]
name = "kulupu-primitives"
version = "1.3.1"
authors = ["Wei Tang <wei@that.world>"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false, features = ["derive"] }
sp-core = { path = "../vendor/substrate/primitives/core", default-features = false }
sp-api = { path = "../vendor/substrate/primitives/api", default-features = false }

[features]
default = ["std"]
std = ["sp-core/std", "sp-api/std", "codec/std"]
