[package]
name = "kulupu-primitives"
version = "2.7.0"
authors = ["Wei Tang <wei@that.world>"]
license = "GPL-3.0-or-later"
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "kulupu", default-features = false }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "kulupu", default-features = false }

[features]
default = ["std"]
std = ["sp-core/std", "sp-api/std", "codec/std"]
