[package]
name = "kulupu-runtime"
version = "2.3.0"
authors = ["Wei Tang <wei@that.world>"]
license = "GPL-3.0-or-later"
edition = "2018"

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }
codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false, features = ["derive"] }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "kulupu", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "kulupu", default-features = false }
sp-version = { git = "https://github.com/paritytech/substrate", branch = "kulupu", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "kulupu", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "kulupu", default-features = false }
sp-offchain = { git = "https://github.com/paritytech/substrate", branch = "kulupu", default-features = false }
sp-consensus-pow = { git = "https://github.com/paritytech/substrate", branch = "kulupu", default-features = false }
sp-session = { git = "https://github.com/paritytech/substrate", branch = "kulupu", default-features = false }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "kulupu", default-features = false }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "kulupu", default-features = false }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "kulupu", default-features = false }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "kulupu", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "kulupu", default-features = false }
frame-executive = { git = "https://github.com/paritytech/substrate", branch = "kulupu", default-features = false }
kulupu-primitives = { path = "../primitives", default-features = false }
smallvec = "1.4.0"
static_assertions = "1.1.0"

system = { package = "frame-system", git = "https://github.com/paritytech/substrate", branch = "kulupu", default-features = false }
balances = { package = "pallet-balances", git = "https://github.com/paritytech/substrate", branch = "kulupu", default-features = false }
utility = { package = "pallet-utility", git = "https://github.com/paritytech/substrate", branch = "kulupu", default-features = false }
indices = { package = "pallet-indices", git = "https://github.com/paritytech/substrate", branch = "kulupu", default-features = false }
timestamp = { package = "pallet-timestamp", git = "https://github.com/paritytech/substrate", branch = "kulupu", default-features = false }
transaction-payment = { package = "pallet-transaction-payment", git = "https://github.com/paritytech/substrate", branch = "kulupu", default-features = false }
randomness-collective-flip = { package = "pallet-randomness-collective-flip", git = "https://github.com/paritytech/substrate", branch = "kulupu", default-features = false }
democracy = { package = "pallet-democracy", git = "https://github.com/paritytech/substrate", branch = "kulupu", default-features = false }
collective = { package = "pallet-collective", git = "https://github.com/paritytech/substrate", branch = "kulupu", default-features = false }
elections-phragmen = { package = "pallet-elections-phragmen", git = "https://github.com/paritytech/substrate", branch = "kulupu", default-features = false }
membership = { package = "pallet-membership", git = "https://github.com/paritytech/substrate", branch = "kulupu", default-features = false }
treasury = { package = "pallet-treasury", git = "https://github.com/paritytech/substrate", branch = "kulupu", default-features = false }
scheduler = { package = "pallet-scheduler", git = "https://github.com/paritytech/substrate", branch = "kulupu", default-features = false }
identity = { package = "pallet-identity", git = "https://github.com/paritytech/substrate", branch = "kulupu", default-features = false }
proxy = { package = "pallet-proxy", git = "https://github.com/paritytech/substrate", branch = "kulupu", default-features = false }
vesting = { package = "pallet-vesting", git = "https://github.com/paritytech/substrate", branch = "kulupu", default-features = false }
multisig = { package = "pallet-multisig", git = "https://github.com/paritytech/substrate", branch = "kulupu", default-features = false }
rewards = { package = "pallet-rewards", path = "../frame/rewards", default-features = false }
eras = { package = "pallet-eras", path = "../frame/eras", default-features = false }
difficulty = { package = "pallet-difficulty", path = "../frame/difficulty", default-features = false }

frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "kulupu", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "kulupu", default-features = false }

# benchmarking
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "kulupu", default-features = false, optional = true }
frame-system-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "kulupu", default-features = false, optional = true }
hex-literal = { version = "0.2.1", optional = true }

[build-dependencies]
wasm-builder-runner = { package = "substrate-wasm-builder-runner", version = "2.0.0" }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-std/std",
	"sp-io/std",
	"sp-version/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-offchain/std",
	"sp-consensus-pow/std",
	"sp-session/std",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-transaction-pool/std",
	"sp-inherents/std",
	"frame-support/std",
	"frame-executive/std",
	"kulupu-primitives/std",

	"system/std",
	"balances/std",
	"utility/std",
	"indices/std",
	"timestamp/std",
	"transaction-payment/std",
	"randomness-collective-flip/std",
	"democracy/std",
	"collective/std",
	"elections-phragmen/std",
	"membership/std",
	"treasury/std",
	"scheduler/std",
	"identity/std",
	"proxy/std",
	"vesting/std",
	"multisig/std",
	"rewards/std",
	"eras/std",
	"difficulty/std",

	"frame-system-rpc-runtime-api/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
]
runtime-benchmarks = [
	"sp-runtime/runtime-benchmarks",
	"frame-benchmarking",
	"frame-support/runtime-benchmarks",
	"frame-system-benchmarking",
	"hex-literal",
	"system/runtime-benchmarks",
	"balances/runtime-benchmarks",
	"utility/runtime-benchmarks",
	"indices/runtime-benchmarks",
	"timestamp/runtime-benchmarks",
	"democracy/runtime-benchmarks",
	"collective/runtime-benchmarks",
	"treasury/runtime-benchmarks",
	"scheduler/runtime-benchmarks",
	"identity/runtime-benchmarks",
	"proxy/runtime-benchmarks",
	"vesting/runtime-benchmarks",
	"multisig/runtime-benchmarks",
	# Kulupu specific pallets
	"rewards/runtime-benchmarks",
]
