[package]
name = "pallet-anyupgrade"
version = "0.1.0"
authors = ["Wei Tang <hi@that.world>"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false, features = ["derive"] }
frame-support = { path = "../../vendor/substrate/frame/support", default-features = false }
frame-system = { path = "../../vendor/substrate/frame/system", default-features = false }
sp-runtime = { path = "../../vendor/substrate/primitives/runtime", default-features = false }
sp-std = { path = "../../vendor/substrate/primitives/std", default-features = false }
sp-inherents = { path = "../../vendor/substrate/primitives/inherents", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-inherents/std",
]
