[package]
name = "pallet-difficulty"
version = "1.3.0"
authors = ["Wei Tang <wei@that.world>"]
edition = "2018"
description = "Difficulty adjustment module for Kulupu."

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false, features = ["derive"] }
sp-std = { path = "../../vendor/substrate/primitives/std", default-features = false }
sp-core = { path = "../../vendor/substrate/primitives/core", default-features = false }
sp-runtime = { path = "../../vendor/substrate/primitives/runtime", default-features = false }
sp-timestamp = { path = "../../vendor/substrate/primitives/timestamp", default-features = false }
frame-support = { path = "../../vendor/substrate/frame/support", default-features = false }
pallet-timestamp = { path = "../../vendor/substrate/frame/timestamp", default-features = false }
kulupu-primitives = { path = "../../primitives", default-features = false }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-std/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-timestamp/std",
	"frame-support/std",
	"pallet-timestamp/std",
	"kulupu-primitives/std",
]
