[package]
name = "pallet-difficulty"
version = "2.4.0"
authors = ["Wei Tang <wei@that.world>"]
license = "GPL-3.0-or-later"
edition = "2018"
description = "Difficulty adjustment module for Kulupu."

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false, features = ["derive"] }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "kulupu", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "kulupu", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "kulupu", default-features = false }
sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "kulupu", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "kulupu", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "kulupu", default-features = false }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "kulupu", default-features = false }

kulupu-primitives = { path = "../../primitives", default-features = false }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-std/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-timestamp/std",
	"frame-system/std",
	"frame-support/std",
	"pallet-timestamp/std",
	"kulupu-primitives/std",
]
