[package]
name = "pallet-eras"
version = "2.2.0"
authors = ["Wei Tang <wei@that.world>"]
license = "GPL-3.0-or-later"
edition = "2018"
description = "Era information recording for later use."

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false, features = ["derive"] }
sp-std = { path = "../../vendor/substrate/primitives/std", default-features = false }
frame-system = { path = "../../vendor/substrate/frame/system", default-features = false }
frame-support = { path = "../../vendor/substrate/frame/support", default-features = false }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-std/std",
	"frame-system/std",
	"frame-support/std",
]
